fixed bug on mobile version - arrow in footer

--- a/portfolio/morefun/css/style.less
+++ b/portfolio/morefun/css/style.less
@@ -262,7 +262,7 @@ a {
     transition:1000ms;
     //box-shadow:0 0 2px 10px #222;
     overflow:hidden;
-    @media (max-width:570px) { display:none; }
+    @media (max-width:420px) { display:none; }
     @media handheld, only screen and (max-device-width:570px) { display:block; }
     .text {
         text-align:center;
@@ -270,7 +270,7 @@ a {
         position:relative;
         top:50%;
         transform:translateY(-50%);
-        @media (max-width:635px) { font-size:2.5vw; }
+        @media (max-width:655px) { font-size:2.4vw; }
         @media handheld, only screen and (max-device-width:570px) { font-size:3.5vw; }
         i { 
             color:@niceBlue;
@@ -278,15 +278,15 @@ a {
         } 
     }
     .shrinkExpand {
-        float:right;
         padding:0px 10px;
-        margin-top:-8px;
-        position:relative;
+        position:absolute;
+        top:50%;
+        right:0px;
+        transform:translateY(-50%);
         cursor:pointer;
         transition:200ms;
         color:@niceBlue;
         &:hover { color:darken(#363377, 1%); }
-        @media handheld, only screen and (max-device-width:570px) { margin-top:-15; }
     }
 }
 .shrunkFooter {
